# kreoshine-py3-products

./: .gitignore  MANIFEST.in  README.md  requirements-prod.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: pylint.yml
app/: __init__.py  __main__.py
app/api/const/: __init__.py
app/api/const/query/: __init__.py  keys.py  values.py
app/api/helpers/: __init__.py  decorators.py  deserializer.py  query_params_parser.py  query_params_parsing.py  serialization.py
app/api/validation/: __init__.py  schemas.py  validator.py
app/api/validation/schemas/: __init__.py  products.py  products_validation_schema.py
app/api/views/: __init__.py  mixins.py  products_view.py
app/const/: __init__.py
app/const/api/: __init__.py  product.py  query.py
app/const/db/: __init__.py  product.py
db/: __init__.py  alembic.ini  dao.py  models.py  utils.py
db/const/: __init__.py
db/dao/: __init__.py  dao_products.py
db/migrations/public/: env.py  script.py.mako
db/migrations/public/versions/: 1abd7c7d34b1_initial.py
db/models/: __init__.py  base.py  product.py  products.py
dev/: __init__.py  __main__.py  deploy.py  docker-compose.yml  notes.md
dev/scripts/: db.py  docker.py
dev/utils/: base_utils.py  db_utils.py  echo.py  log_utils.py
settings/: __init__.py
settings/config/: app.toml  db.toml  deploy.toml  logging.toml
tests/: conftest.py
tests/db/migrations/: test_stairway.py
tests/plugins/: database.py
tests/utils/: db.py
