[metadata]
name = kreo_products
version = 0.1.0
author = Vitalii Sintsov
author_email = sincov.vitalii@gmail.com
description = Microservice for products
long_description = file: README.md
license = ''
classifiers =
    Framework :: AIOHTTP
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = ~=3.12
install_requires = file: requirements.txt

[options.entry_points]
console_scripts =
    start = app.__main__:start_service
