[metadata]
name = kreo_products
version = 0.1.0
author = Vitalii Sintsov
author_email = sincov.vitalii@gmail.com
description = Microservice for products
long_description = file: README.md
license = ''
classifiers =
    Framework :: AIOHTTP
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = ~=3.12
install_requires = file: requirements.txt

[options.entry_points]
console_scripts =
    start = app.__main__:start_service
    _dev__initialize_database = dev.deploy:_initialize_database
    _dev__up_docker_environment = dev.deploy:_up_docker_environment
    _dev__start = dev.deploy:_perform_dev_start
    perform_dev_deploy = dev.deploy:perform_dev_deploy
